Update electrs to v0.10.1

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,8 +1,8 @@
 id: electrs
 title: "electrs"
-version: 0.10.0
+version: 0.10.1
 release-notes: |
-  * Update upstream electrs to [v0.10.0](https://github.com/romanz/electrs/blob/master/RELEASE-NOTES.md#0100-jul-22-2023)
+  * Update upstream electrs to [v0.10.1](https://github.com/romanz/electrs/blob/master/RELEASE-NOTES.md#0101-nov-01-2023)
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/electrs-wrapper"
 upstream-repo: "https://github.com/romanz/electrs"
@@ -71,8 +71,8 @@ interfaces:
       - tcp
       - json-rpc
 alerts:
-  install: "INSTABILITY WARNING: Electrs uses up to 1GB of RAM when syncing. Please make sure you have at least this much free RAM before starting Electrs, or you will cause your system to become unresponsive! This is especially risky if running alongside Mastodon on a 4GB system!"
-  start: "INSTABILITY WARNING: Electrs uses up to 1GB of RAM when syncing. Please make sure you have at least this much free RAM before starting Electrs, or you will cause your system to become unresponsive! This is especially risky if running alongside Mastodon on a 4GB system!"
+  install: "INSTABILITY WARNING: Electrs uses up to 1GB of RAM when syncing. Please make sure you have at least this much free RAM before starting Electrs, or you will cause your system to become unresponsive! This is especially risky if running alongside services that consume a lot of RAM on a 4GB system!"
+  start: "INSTABILITY WARNING: Electrs uses up to 1GB of RAM when syncing. Please make sure you have at least this much free RAM before starting Electrs, or you will cause your system to become unresponsive! This is especially risky if running alongside services that consume a lot of RAM on a 4GB system!"
 dependencies:
   bitcoind:
     version: ">=0.21.1.2 <27.0.0"
