--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-electrs.s9pk
-image.tar
-scripts/embassy.js
-.vscode
+*.s9pk
+startos/*.js
+node_modules/
+.DS_Store
+.vscode/
 docker-images
+javascript
