--- a/configurator/src/electrs.toml.template
+++ b/configurator/src/electrs.toml.template
@@ -1,7 +1,7 @@
 auth = "{bitcoin_rpc_user:}:{bitcoin_rpc_pass}"
 daemon_rpc_addr = "{bitcoin_rpc_host}:{bitcoin_rpc_port}"
 daemon_p2p_addr = "{bitcoin_p2p_host}:{bitcoin_p2p_port}"
-network = "bitcoin"
+network = "{network}"
 electrum_rpc_addr = "0.0.0.0:50001"
 log_filters = "{log_filters}"
 {index_batch_size}
