--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,7 +1,9 @@
 id: electrs
 title: "electrs"
-version: 0.10.8
+version: 0.10.8.1
 release-notes: |
+  * Update electrs-wrapper tag to v0.10.8.1
+  * Added support for testnet4 and restored support for btc-rpc-proxy
   * Update upstream electrs to [v0.10.8](https://github.com/romanz/electrs/blob/master/RELEASE-NOTES.md#0108-dec-30-2024)
   * Update Rust base Docker image
 license: mit
@@ -78,8 +80,33 @@ dependencies:
   bitcoind:
     version: ">=0.21.1.2 <29.0.0"
     requirement:
-      type: "required"
+      type: "opt-out"
+      how: Set "Bitcoin Core" to "Bitcoin Core"
     description: Needed for peer interface and rpc interface.
+    config:
+      check:
+        type: script
+      auto-configure:
+        type: script
+    requires-runtime-config: true
+  bitcoind-testnet:
+    version: '>=0.21.1.2 <29.0.0'
+    requirement:
+      type: 'opt-in'
+      how: Set "Bitcoin Core" type to "Bitcoin Core (testnet)"
+    description: Testnet Bitcoin Core node for testing purposes
+    config:
+      check:
+        type: script
+      auto-configure:
+        type: script
+    requires-runtime-config: true
+  btc-rpc-proxy:
+    version: '>=0.3.2.1 <0.5.0'
+    requirement:
+      type: 'opt-in'
+      how: Set "Bitcoin Core" to "Bitcoin Core"
+    description: Provides bitcoin rpc interface needed for info about fees, blockchain, mempool, network, and transactions. Can also use bitcoind for rpc interface, or an external node for both.
     config:
       check:
         type: script
